feat: add travel mode event linkage
